# learn-opengl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: glcamera.h  mesh.h  model.h  shader.h  shader_m.h
src/: camera.h  colors.frag  colors.vs  geometry_shader.gs  hello_window.cpp  hellow_camera.cpp  main.cpp  model.frag  model.vs  shader.frag  shader.h  shader.vs
src_advanced_lighting/: main.cpp  main_1.cpp  main_2.cpp
src_advanced_opengl/: CMakeLists.txt  instancing.vs  model.frag  model.vs  screen.frag
src_bak/: main.cpp  shader_s.h
src_get_start/: hello_coordinate.cpp  hello_shader.cpp  hello_texture.cpp  hello_triangle.cpp  main.cpp  shader.frag  shader.vs
src_model_loading/: colors.frag  main.cpp
src_pbr/: main.cpp  main_1.cpp  main_2.cpp
